deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculator-deployment
  labels:
    app: calculator-project
spec:
  selector:
    matchLabels:
      app: calculator-project
  template: 
    metadata:
      labels:
        app: calculator-project
    spec:
      containers:
      - name: my-calculator
        image: divu11/web-image
        ports:  
        - containerPort: 80

        resources:
          limits:
            cpu: "0.5" 
            memory: "256Mi" 
          requests:
            cpu: "0.1" 
            memory: "64Mi"
