pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  labels:
    owner: Divpreet
spec:
  containers:
  - name: my-calculator
    image: divu11/web-image
    ports:
    - containerPort: 80

    resources:
      limits:
        cpu: "0.5"  
        memory: "256Mi"  
      requests:
        cpu: "0.1"  
        memory: "64Mi"
