service-pod.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculator
spec:
  selector:
    owner: Divpreet
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 32725
  type: NodePort
