ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  # namespace: kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: divpreet.com
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: calculator-service
              port:
                number: 80
